--- a/src/api/requirements.txt
+++ b/src/api/requirements.txt
@@ -2,5 +2,5 @@ fastapi
 uvicorn[standard]
 python-dotenv
 requests
-supabase-py
+supabase
 # Añade aquí cualquier otra librería específica que tu backend utilice.
